--- a/.github/workflows/media-pipeline.yml
+++ b/.github/workflows/media-pipeline.yml
@@ -24,14 +24,18 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e .
-          pip install google-auth-oauthlib google-api-python-client
 
       - name: Run pipeline
         env:
-          # These will be used later by your service clients
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
           YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
           YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
-          ELEVENLABS_API_KEY: ${{ secrets.ELEVENLABS_API_KEY }}
         run: |
           python -m geopilot_publisher.pipeline.run --publish "${{ inputs.publish }}"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifacts
+          path: artifacts/
