--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requires-python = ">=3.10"
 dependencies = [
   "google-auth-oauthlib>=1.2.0",
   "google-api-python-client>=2.120.0",
+  "openai>=1.0.0",
 ]
 
 [tool.setuptools]
