--- a/.github/workflows/media-pipeline.yml
+++ b/.github/workflows/media-pipeline.yml
@@ -25,6 +25,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
 
+      - name: Install ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
       - name: Run pipeline
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
