--- a/.github/workflows/media-pipeline.yml
+++ b/.github/workflows/media-pipeline.yml
@@ -30,6 +30,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
+      - name: Verify ffmpeg installed
+        run: |
+          ffmpeg -version
+
       - name: Run pipeline
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
