--- a/.github/workflows/media-pipeline.yml
+++ b/.github/workflows/media-pipeline.yml
@@ -25,14 +25,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .
 
-      - name: Install ffmpeg
+      - name: Install ffmpeg + fonts
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg
-
-      - name: Verify ffmpeg installed
-        run: |
-          ffmpeg -version
+          sudo apt-get install -y ffmpeg fonts-dejavu-core
 
       - name: Run pipeline
         env:
@@ -42,15 +38,6 @@ jobs:
           YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
         run: |
           python -m geopilot_publisher.pipeline.run --publish "${{ inputs.publish }}"
-
-      - name: List artifacts
-        run: |
-          echo "=== artifacts contents ==="
-          ls -lah artifacts || true
-
-      - name: Verify video exists
-        run: |
-          test -f artifacts/video.mp4 && echo "✅ video.mp4 exists" || (echo "❌ video.mp4 missing" && exit 1)
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
