--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "google-auth-oauthlib>=1.2.0",
   "google-api-python-client>=2.120.0",
   "openai>=1.0.0",
+  "Pillow>=10.0.0",
 ]
 
 [tool.setuptools]
