--- a/.github/workflows/media-pipeline.yml
+++ b/.github/workflows/media-pipeline.yml
@@ -31,6 +31,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg fonts-dejavu-core
 
+      - name: Clean artifacts
+        run: |
+          rm -rf artifacts
+          mkdir -p artifacts
+
       - name: Ensure keywords for publish
         if: ${{ inputs.publish == 'true' }}
         run: |
@@ -50,6 +55,7 @@ jobs:
           YT_CLIENT_ID: ${{ secrets.YT_CLIENT_ID }}
           YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
           YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
+          GP_USE_CONTENT: "1"
         run: |
           python -m geopilot_publisher.pipeline.run --publish "${{ inputs.publish }}"
 
